Made card gaps fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,13 +330,14 @@ li p:hover {
 
 /*-- Members Page --*/
 .siteContainer {
-    margin: 2rem auto;
+    margin: 5rem auto;
     max-width: calc(100% - 80px);
 }
 .cardsContainer {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
-    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, 18rem);
+    justify-content: center;
+    gap: 3rem;
 }
 
 .memberCard {
